Revert "refactor: search matching"
This reverts commit 0a9dc4a8efbb2eb5b0d07d3005d9892e9e4333ba.