@@ -8,6 +8,7 @@ import com.redis.om.spring.search.stream.EntityStream;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
@@ -36,11 +37,13 @@ public class SearchServiceImpl implements SearchService {
     public List<SearchResponse> search(String query) {
         final CharSequence sequence = query.toLowerCase();
 
-        try (var eventSearchStream = entityStream.of(Event.class)) {
-            var posts = eventSearchStream.collect(Collectors.toList());
+        var events = entityStream.of(Event.class)
+                .collect(Collectors.toList());
 
-            return filterBySequence(posts, sequence);
-        }
+        var posts = new ArrayList<Post>();
+        posts.addAll(events);
+
+        return filterBySequence(posts, sequence);
     }
 
     private <T extends Post> List<SearchResponse> filterBySequence(
@@ -50,7 +53,7 @@ public class SearchServiceImpl implements SearchService {
         return posts.parallelStream()
                 .filter(searchPredicate(sequence))
                 .map(this::toSearchResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     private <T extends Post> Predicate<T> searchPredicate(CharSequence sequence) {
@@ -60,12 +63,12 @@ public class SearchServiceImpl implements SearchService {
     }
 
     private boolean matchSequence(String string, CharSequence sequence) {
-        return string.toLowerCase().contains(sequence) || string.matches(sequence.toString());
+        return string.toLowerCase().contains(sequence);
     }
 
     private SearchResponse toSearchResponse(Post post) {
         var type = post instanceof Event ? EVENT : ARTICLE;
-        var response = new SearchResponse();
+        SearchResponse response = new SearchResponse();
         response.id(post.getId());
         response.title(post.getTitle());
         response.description(post.getSummary());
